this fixes the shoutout box overflow issue in the hero

--- a/index.scss
+++ b/index.scss
@@ -96,8 +96,8 @@ h2 {
 }
 
 .content-wrapper {
-  padding-left: 160px;
-  padding-right: 160px;
+  padding-left: 164px;
+  padding-right: 164px;
   position: relative;
   max-width: 1440px;
   width: 100%;
@@ -130,17 +130,17 @@ h2 {
 .nav-block {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  margin-top: 75px;
+  margin-top: 64px;
   margin-bottom: 130px;
 }
 
 .hero-shoutout {
   border: 2px solid $white;
-  display: inline-block;
-  padding-left: 46px;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding-left: 42px;
+  padding-bottom: 24px;
+  padding-top: 36px;
   max-height: 280px;
+  width: 652px;
 }
 
 .hero-nav {
